--- a/src/ui/TASkOcupadoView.form
+++ b/src/ui/TASkOcupadoView.form
@@ -145,7 +145,7 @@
               <Component id="memberComboBox" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="notificationsScrollPane" min="-2" pref="491" max="-2" attributes="0"/>
-              <EmptySpace pref="7" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
